--- a/sample.html
+++ b/sample.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Dummy Heading</title>
+</head>
+<body>
+    <h1>Welcome to My Dummy Heading</h1>
+    <p>This is a simple HTML file with a heading.</p>
+</body>
+</html>
