--- a/sample.html
+++ b/sample.html
@@ -1,10 +1,2 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Dummy Heading</title>
-</head>
-<body>
-    <h1>Welcome to My Dummy Heading</h1>
-    <p>This is a simple HTML file with a heading.</p>
-</body>
-</html>
+<!--email_off-->22f3001740@ds.study.iitm.ac.in<!--/email_off-->
